--- a/SpotifyProject/Base.lproj/Main.storyboard
+++ b/SpotifyProject/Base.lproj/Main.storyboard
@@ -81,11 +81,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sLM-rs-IaN">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="296"/>
+                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jOI-Nw-gAd">
-                                <rect key="frame" x="0.0" y="268" width="600" height="28"/>
+                                <rect key="frame" x="0.0" y="264" width="600" height="32"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="28" id="XpH-Hu-Kg5"/>
+                                    <constraint firstAttribute="height" constant="32" id="XpH-Hu-Kg5"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -128,19 +131,6 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Songs:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DDe-eN-46p">
-                                <rect key="frame" x="12" y="271" width="89" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="eVu-JH-chA"/>
-                                    <constraint firstAttribute="width" constant="89" id="rDe-Ml-DvS"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sLM-rs-IaN">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="296"/>
-                            </imageView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="45" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4QJ-o7-zG9">
                                 <rect key="frame" x="0.0" y="292" width="600" height="308"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -154,17 +144,11 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SongNameGoesHere" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e7d-tC-GoY">
-                                                    <rect key="frame" x="45" y="1" width="197" height="19"/>
+                                                    <rect key="frame" x="45" y="4" width="197" height="19"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="197" id="aGL-wI-ABa"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
-                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="#" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vFL-UQ-jA9">
-                                                    <rect key="frame" x="20" y="12" width="10" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -177,19 +161,25 @@
                                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="AlbumNameGoesHere" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wwu-Lx-53D">
-                                                    <rect key="frame" x="96" y="21" width="111" height="20"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" EXPLICIT " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wrp-NA-Meg">
+                                                    <rect key="frame" x="45" y="23" width="53" height="12"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="10"/>
+                                                    <color key="textColor" red="1" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="#" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vFL-UQ-jA9">
+                                                    <rect key="frame" x="16" y="12" width="10" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="AlbumNameGoesHereWhichIsExtendedForLengthOfLbl" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wwu-Lx-53D">
+                                                    <rect key="frame" x="99" y="19" width="276" height="20"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="111" id="CRZ-ky-AdC"/>
+                                                        <constraint firstAttribute="width" constant="276" id="CRZ-ky-AdC"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="10"/>
                                                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" EXPLICIT " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wrp-NA-Meg">
-                                                    <rect key="frame" x="45" y="25" width="53" height="12"/>
-                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="10"/>
-                                                    <color key="textColor" red="1" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -198,16 +188,16 @@
                                                 <constraint firstItem="e7d-tC-GoY" firstAttribute="leading" secondItem="LHd-UM-lbu" secondAttribute="leading" constant="45" id="4Xe-59-fa7"/>
                                                 <constraint firstItem="wrp-NA-Meg" firstAttribute="leading" secondItem="e7d-tC-GoY" secondAttribute="leading" id="9ZU-Sk-Kx9"/>
                                                 <constraint firstItem="wrp-NA-Meg" firstAttribute="centerY" secondItem="Wwu-Lx-53D" secondAttribute="centerY" id="GkH-jo-EAc"/>
-                                                <constraint firstItem="wrp-NA-Meg" firstAttribute="top" secondItem="e7d-tC-GoY" secondAttribute="bottom" constant="5" id="IYm-CJ-yjG"/>
+                                                <constraint firstItem="wrp-NA-Meg" firstAttribute="top" secondItem="e7d-tC-GoY" secondAttribute="bottom" id="IYm-CJ-yjG"/>
                                                 <constraint firstItem="L2Z-vG-aYm" firstAttribute="top" secondItem="LHd-UM-lbu" secondAttribute="topMargin" constant="4" id="RMW-wo-EPY"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="Wwu-Lx-53D" secondAttribute="bottom" constant="-5" id="Rd0-Vc-I1G"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="Wwu-Lx-53D" secondAttribute="bottom" constant="-2" id="Rd0-Vc-I1G"/>
                                                 <constraint firstItem="L2Z-vG-aYm" firstAttribute="trailing" secondItem="LHd-UM-lbu" secondAttribute="trailingMargin" id="ako-xa-PTn"/>
-                                                <constraint firstItem="Wwu-Lx-53D" firstAttribute="top" secondItem="LHd-UM-lbu" secondAttribute="topMargin" constant="13" id="dJk-qK-Xv5"/>
-                                                <constraint firstItem="Wwu-Lx-53D" firstAttribute="leading" secondItem="vFL-UQ-jA9" secondAttribute="trailing" constant="66" id="fVA-1V-kA4"/>
-                                                <constraint firstItem="e7d-tC-GoY" firstAttribute="top" secondItem="LHd-UM-lbu" secondAttribute="topMargin" constant="-7" id="fhT-Pw-kWq"/>
+                                                <constraint firstItem="Wwu-Lx-53D" firstAttribute="top" secondItem="LHd-UM-lbu" secondAttribute="topMargin" constant="11" id="dJk-qK-Xv5"/>
+                                                <constraint firstItem="Wwu-Lx-53D" firstAttribute="leading" secondItem="vFL-UQ-jA9" secondAttribute="trailing" constant="73" id="fVA-1V-kA4"/>
+                                                <constraint firstItem="e7d-tC-GoY" firstAttribute="top" secondItem="LHd-UM-lbu" secondAttribute="topMargin" constant="-4" id="fhT-Pw-kWq"/>
                                                 <constraint firstItem="vFL-UQ-jA9" firstAttribute="baseline" secondItem="L2Z-vG-aYm" secondAttribute="baseline" id="tu5-Zx-Oex"/>
                                                 <constraint firstItem="vFL-UQ-jA9" firstAttribute="top" secondItem="L2Z-vG-aYm" secondAttribute="top" id="xQx-fG-oXr"/>
-                                                <constraint firstItem="Wwu-Lx-53D" firstAttribute="leading" secondItem="LHd-UM-lbu" secondAttribute="leading" constant="96" id="yQt-ge-WBg"/>
+                                                <constraint firstItem="Wwu-Lx-53D" firstAttribute="leading" secondItem="LHd-UM-lbu" secondAttribute="leading" constant="99" id="yQt-ge-WBg"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
@@ -225,6 +215,16 @@
                                     <outlet property="delegate" destination="lNr-Jv-gxG" id="ZGv-Gs-JLU"/>
                                 </connections>
                             </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Top Songs:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DDe-eN-46p">
+                                <rect key="frame" x="12" y="269" width="89" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="eVu-JH-chA"/>
+                                    <constraint firstAttribute="width" constant="89" id="rDe-Ml-DvS"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -248,7 +248,7 @@
                             <constraint firstItem="4QJ-o7-zG9" firstAttribute="trailing" secondItem="jOI-Nw-gAd" secondAttribute="trailing" id="cIo-xL-Qfr"/>
                             <constraint firstItem="sLM-rs-IaN" firstAttribute="leading" secondItem="cHD-XS-qNM" secondAttribute="leading" id="ir4-6b-9uc"/>
                             <constraint firstItem="4gK-8I-me0" firstAttribute="top" secondItem="Yi4-kn-zC1" secondAttribute="bottom" constant="177" id="k5Z-ev-ESq"/>
-                            <constraint firstItem="4QJ-o7-zG9" firstAttribute="top" secondItem="DDe-eN-46p" secondAttribute="bottom" id="xML-NF-hWc"/>
+                            <constraint firstItem="4QJ-o7-zG9" firstAttribute="top" secondItem="DDe-eN-46p" secondAttribute="bottom" constant="2" id="xML-NF-hWc"/>
                             <constraint firstItem="DDe-eN-46p" firstAttribute="leading" secondItem="cHD-XS-qNM" secondAttribute="leadingMargin" constant="-8" id="zlD-Qz-sGz"/>
                         </constraints>
                     </view>
